--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
